--- a/experiments/wraps.ipynb
+++ b/experiments/wraps.ipynb
@@ -12,28 +12,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "a40b0cd7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def beauty(cls=None, /, *, x=1, y=2):\n",
-    "    print(cls)\n",
+    "def beauty(f=None, /, *, x=1, y=2):\n",
+    "    print(f)\n",
     "\n",
-    "    def wrap(cls):\n",
-    "        print(42)\n",
+    "    def wrap(*args, **kwargs):\n",
+    "        print(f\"Pre: {x} {y}\")\n",
+    "        f(*args, **kwargs)\n",
+    "        print(\"Post\")\n",
     "    \n",
-    "    if cls is None:\n",
-    "        # We're called with parens.\n",
-    "        return wrap\n",
-    "\n",
-    "    # We're called as @dataclass without parens.\n",
-    "    return wrap(cls)    "
+    "    if f is None:\n",
+    "        return lambda f: beauty(f, x=x, y=y)\n",
+    "    else:\n",
+    "        return wrap    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "c419cdab",
    "metadata": {},
    "outputs": [
@@ -41,30 +41,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function foo at 0x00000258FA93A0C0>\n",
-      "42\n"
+      "<function foo at 0x104994680>\n"
      ]
     }
    ],
    "source": [
     "@beauty\n",
-    "def foo():\n",
-    "    print('foo')"
+    "def foo(x):\n",
+    "    print('foo', x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "ef1cc5ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre: 1 2\n",
+      "foo 23\n",
+      "Post\n"
+     ]
+    }
+   ],
    "source": [
-    "foo"
+    "foo(23)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "25797ca8",
    "metadata": {},
    "outputs": [
@@ -73,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "None\n",
-      "42\n"
+      "<function foo at 0x104997f60>\n"
      ]
     }
    ],
@@ -85,8 +94,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "6ea6f77d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre: 10 20\n",
+      "foo\n",
+      "Post\n"
+     ]
+    }
+   ],
+   "source": [
+    "foo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18da9fbc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -108,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
