--- a/experiments/g.ipynb
+++ b/experiments/g.ipynb
@@ -18,97 +18,103 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/31/dkl97hks2c14b663vl55pt440000gn/T/ipykernel_47492/1006162436.py:1: RuntimeWarning: \n",
+      "/var/folders/31/dkl97hks2c14b663vl55pt440000gn/T/ipykernel_47569/70525116.py:1: RuntimeWarning: \n",
       "  Paranoia checks are always enabled in notebooks: performances can be significantly impaired\n",
       "  import microgp4 as ugp\n"
      ]
     }
    ],
    "source": [
-    "import microgp4 as ugp\n",
-    "from microgp4.tools import *\n",
-    "from microgp4.ea.graph import *\n",
-    "\n",
-    "import networkx as nx"
+    "import microgp4 as ugp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "macro1a = ugp.f.macro('1')\n",
-    "macro1b = ugp.f.macro('call {m1}', m1=ugp.f.global_reference('frame1'))\n",
-    "frame1 = ugp.f.bunch([macro1a, macro1a, macro1a, macro1a, macro1b], name='frame1', size=10_000)\n",
-    "frame2 = ugp.f.bunch([macro1a], name='frame2', size=10_000)"
+    "class Foo:\n",
+    "    def __init__(self, foo):\n",
+    "        self.foo = foo\n",
+    "    \n",
+    "    def check(self):\n",
+    "        print(f\"{self.foo} Check Method Function()\")\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def check(arg):\n",
+    "        print(f\"Check Function({arg})\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Individual with 5 frames and 50000 macros (0 parameters total, 1,941 structural)'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check Function(42)\n"
+     ]
     }
    ],
    "source": [
-    "new_individual = ugp.classes.Individual(top_frame=frame1)\n",
-    "unroll(new_individual, frame1)\n",
-    "unroll(new_individual, frame2)\n",
-    "unroll(new_individual, frame2)\n",
-    "unroll(new_individual, frame2)\n",
-    "unroll(new_individual, frame2)\n",
-    "#new_individual.as_figure()\n",
-    "str(new_individual)"
+    "Foo.check(42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_individual.G.add_edge(8, 29, key='test', kind='link')\n",
-    "new_individual.G.add_edge(20, 26, key='test', kind='link')\n",
-    "new_individual.as_figure()"
+    "f42 = Foo(42)\n",
+    "f13 = Foo(13)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Foo.check() missing 1 required positional argument: 'arg'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mf42\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m f13\u001b[38;5;241m.\u001b[39mcheck()\n",
+      "\u001b[0;31mTypeError\u001b[0m: Foo.check() missing 1 required positional argument: 'arg'"
+     ]
+    }
+   ],
    "source": [
-    "new_individual.as_tree(figsize=(15,5))"
+    "f42.check()\n",
+    "f13.check()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'foo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mFoo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m99\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[15], line 10\u001b[0m, in \u001b[0;36mFoo.check\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 10\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfoo\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Check Method Function()\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'foo'"
+     ]
+    }
+   ],
    "source": [
-    "new_individual.discard_useless_components()\n",
-    "#new_individual.as_figure()\n",
-    "str(new_individual)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_individual.as_tree(figsize=(15,5))"
+    "Foo.check(99)"
    ]
   },
   {
