--- a/experiments/g.ipynb
+++ b/experiments/g.ipynb
@@ -12,14 +12,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-28T15:44:06.975050Z",
+     "start_time": "2023-07-28T15:44:06.140524Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/31/dkl97hks2c14b663vl55pt440000gn/T/ipykernel_12159/70525116.py:1: RuntimeWarning: \n",
-      "  Paranoia checks are always enabled in notebooks: performances can be significantly impaired.\n",
+      "/var/folders/31/dkl97hks2c14b663vl55pt440000gn/T/ipykernel_20212/70525116.py:1: RuntimeWarning: \n",
+      "  Paranoia checks are always enabled in notebooks: performances can be significantly impaired\n",
       "  See https://github.com/squillero/microgp4/blob/pre-alpha/PARANOIA.md for details\n",
       "  import microgp4 as ugp\n"
      ]
@@ -27,26 +32,6 @@
    ],
    "source": [
     "import microgp4 as ugp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ugp.debug_mode"
    ]
   },
   {
@@ -67,26 +52,6 @@
    ],
    "source": [
     "ugp.paranoia_mode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ugp.notebook_mode"
    ]
   },
   {
